# Weather-synthetic-sales-data-PBI-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: Location config.csv  Product category config.csv  Product config.csv  Product location config.csv  Salespeople config.csv
dev_tools/: construct_project_tree.py
documentation/: fmi_api_notes.md  power_bi_report_design.md  power_bi_report_pages.md  synda_design.md
powerbi_project/: AggregationTypeInclusionTable.xlsx  AtomicMeasuresTable.xlsx  CalculationGroupInclusionTable.xlsx  Theme.json  weather_and_synthetic_sales_data_demo.pbip
powerbi_project/weather_and_synthetic_sales_data_demo.Report/: .platform  definition.pbir
powerbi_project/weather_and_synthetic_sales_data_demo.SemanticModel/: .platform  diagramLayout.json
scripts/notebooks/: explore_computations.py  explore_fetch_data.py  run_job_generate_synthetic_data.py  run_job_write_config_to_delta.py
synda/: __init__.py  computations.py  config.py  data_io.py  fetch_data.py  general_functions.py  globals.py  synthetic_data_generator.py
synda/jobs/: __init__.py  run_synthetic_data_generation.py
synda/models/: __init__.py  base_models.py  sales_locale_model.py  salesperson_model.py  weather_model.py
tests/fixtures/: __init__.py  mock_fixtures.py  parametrized_fixtures.py  test_data_fixtures.py
tests/integration/: test_integration_computations.py  test_integration_simple_sales_locale_model.py  test_integration_synthetic_data_generator.py  test_integration_weather_model.py
tests/test_data/: fmi_xml_sample.xml  location_config.csv  (+3 more)
(+373 files in other folders)
